src/objects/ITOP_Device_Product_Line__c.object
<CustomObject>
    <description>Product line of IT On Point and Eli Lilly supported devices (e.g. - the iPhone)</description>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Information used to specify device product line</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <inlineHelpText>Device Line Icon to summarize entire line (iPhone)</inlineHelpText>
        <label>Icon</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Image_Source__c</fullName>
        <label>Image Source</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Maker/Manufacturer of device</description>
        <label>Manufacturer</label>
        <referenceTo>ITOP_Device_Manufacturer__c</referenceTo>
        <relationshipLabel>ITOP Device Product Line</relationshipLabel>
        <relationshipName>ITOP_Device_Manufacturer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <formula>&apos;On which &apos; +   Name  + &apos; does your problem occur?&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ITOP Device Type</label>
        <referenceTo>ITOP_Device_Type__c</referenceTo>
        <relationshipLabel>ITOP Device Product Line</relationshipLabel>
        <relationshipName>ITOP_Device_Product_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ITOP Device Product Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ITOP Device Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ITOP Device Product Line</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>